# rust-examples

./: .gitmodules  README.md
actix1/: Cargo.toml  README.md
actix1/src/: main.rs
any1/: Cargo.toml
any1/src/: async_graphql_like.rs  main.rs
argon21/: Cargo.toml
argon21/src/: main.rs
askama1/: Cargo.toml
askama1/src/: main.rs
async-graphql1/: Cargo.toml
async-graphql1/src/: main.rs
async-graphql2/: Cargo.toml
async-graphql2/src/: main.rs
async-graphql3/: Cargo.toml
async-graphql3/src/: main.rs
async-graphql4/: Cargo.toml
async-graphql4/src/: extension.rs  main.rs  rbac.rs  schema.rs
async-graphql5/: Cargo.toml  README.md
async-graphql5/src/: extension.rs  main.rs
async-graphql6/: Cargo.toml  README.md
async-graphql6/src/: main.rs
axum1/: Cargo.toml  README.md
axum1/src/: main.rs
axum10/: Cargo.toml
axum10/src/: main.rs
axum11/: Cargo.toml
axum11/src/: main.rs
axum2/: Cargo.toml
axum2/src/: main.rs
axum3/: Cargo.toml
axum3/src/: main.rs
axum4/: Cargo.toml
axum4/src/: main.rs
axum5/: Cargo.toml
axum5/src/: main.rs
axum6/: Cargo.toml
axum6/src/: main.rs
axum7/: Cargo.toml
axum7/src/: main.rs
axum8/: Cargo.toml
axum8/src/: main.rs
axum9/: Cargo.toml
axum9/src/: main.rs
box-downcast/: Cargo.toml
box-downcast/src/: main.rs
catch_unwind1/: Cargo.toml
catch_unwind1/src/: main.rs
chrono1/: Cargo.toml
chrono1/src/: main.rs
clap1/: Cargo.toml
clap1/tests/: a.rs  b.rs  c.rs
cloud-storage1/: .devcontainer.json  .gitignore  Cargo.toml  Dockerfile  compose.yaml
cloud-storage1/firebase/: .firebaserc  Dockerfile  firebase.json
cloud-storage1/src/: main.rs
debug1/: Cargo.toml
debug1/src/: main.rs
debug2/: Cargo.toml
debug2/src/: main.rs
debug2/tests/: lib.rs
derive_macro1/: README.md
dialoguer1/: Cargo.toml
dialoguer1/src/: main.rs
error1/: Cargo.toml
error1/src/: main.rs
fn1/: Cargo.toml  README.md
fn1/src/: main.rs
gcloud-auth1/: Cargo.toml
gcloud-auth1/src/: main.rs
git21/: Cargo.toml
git21/src/: main.rs
google-authz1/: Cargo.toml  _env
google-authz1/src/: main.rs
google-authz2/: README.md
google-authz2/crates/with-tonic/: Cargo.toml
google-authz2/crates/with-tonic/src/: main.rs
google-authz2/crates/without-tonic/: Cargo.toml
google-authz2/crates/without-tonic/src/: main.rs
google-cloud-auth-v0-20/: Cargo.toml
google-cloud-auth-v0-20/src/: main.rs
google-drive1/: Cargo.toml  README.md
google-drive1/src/: main.rs
googleapis-google-cloud-auth1/: Cargo.toml
googleapis-google-cloud-auth1/src/: google_auth_client.rs  main.rs
googleapis-tonic-google-firestore-v1-1/: Cargo.toml
googleapis-tonic-google-firestore-v1-1/src/: main.rs
hyper-util1/: Cargo.toml
hyper-util1/src/: main.rs
ical1/: Cargo.toml  README.md
ical1/src/: calendar_properties.rs  date_time.rs  date_time_stamp.rs  i_calendar.rs  i_calendar_object.rs  lib.rs  main.rs  property.rs  unique_identifier.rs
ical1/tests/: lib.rs
include_str1/: Cargo.toml
include_str1/src/: main.rs
iterator1/: Cargo.toml
iterator1/src/: main.rs  my_dir.rs  my_vec.rs
jsonwebtoken1/: Cargo.toml  README.md
jsonwebtoken1/src/: main.rs
jsonwebtoken2/: Cargo.toml
jsonwebtoken2/src/: main.rs
lettre_email1/: Cargo.toml
lettre_email1/src/: main.rs
logos1/: Cargo.toml
logos1/src/: main.rs
lopdf1/: .gitignore  Cargo.toml  shell.nix
lopdf1/src/: image.rs  main.rs
macro_rules1/: Cargo.toml
macro_rules1/src/: error1.rs  error2.rs  macros.rs  main.rs
mockall1/: Cargo.toml
mockall1/src/: automock_async_trait.rs  automock_simple.rs  inherit.rs  main.rs  mock_async_inherit.rs  mock_inherit.rs
nom1/: Cargo.toml
nom1/src/: main.rs
oauth-client1/: Cargo.toml  _env
oauth-client1/src/: main.rs
owned-ttf-parser1/: .gitignore  Cargo.toml  README.md
owned-ttf-parser1/src/: main.rs  wrap.rs
parse-display1/: Cargo.toml
parse-display1/src/: main.rs
path1/: Cargo.toml
path1/src/: main.rs
printpdf1/: Cargo.toml
printpdf1/src/: main.rs  my_pdf.rs
quick_xml1/: Cargo.toml
quick_xml1/src/: main.rs
resvg1/: Cargo.toml  index.html
resvg1/src/: main.rs
scraper1/: Cargo.toml  README.md
scraper1/src/: main.rs
secp256k1_/: Cargo.toml
secp256k1_/src/: main.rs
serde-path-to-error1/: Cargo.toml
serde-path-to-error1/src/: main.rs
serde_json1/: Cargo.toml
serde_json1/src/: bool_from_01.rs  enum1.rs  main.rs
serde_json2/: Cargo.toml
serde_json2/src/: main.rs
serde_urlencoded1/: Cargo.toml
serde_urlencoded1/src/: main.rs
simple-mermaid1/: Cargo.toml  README.md
simple-mermaid1/src/: main.rs  model.rs
sqlx1/: Cargo.toml
sqlx1/src/: main.rs
sqlx_sqlite/: .gitignore  Cargo.toml
sqlx_sqlite/src/: main.rs
std1/: Cargo.toml  README.md
std1/src/: main.rs
str/: Cargo.toml
str/src/: main.rs
strum1/: Cargo.toml  README.md
strum1/src/: as_ref_str.rs  display.rs  enum_count.rs  enum_discriminants.rs  enum_iter.rs  enum_message.rs  enum_property.rs  (+5 more)
svg2pdf1/: Cargo.toml
syntect1/: Cargo.toml  syntaxes
thiserror1/: Cargo.toml
thiserror1/src/: main.rs
thiserror2/: Cargo.toml
thiserror3/: Cargo.toml
time1/: Cargo.toml
tonic-server1/: Cargo.toml  shell.nix
tonic-server1/proto/: hello.proto
tonic-server1/src/: main.rs
ulid1/: Cargo.toml
use_case1/: Cargo.toml
v4-sign/: Cargo.toml
v4-sign/src/: active_datetime.rs  canonical_request.rs  credential_scope.rs  date.rs  expiration.rs  lib.rs  location.rs  policy_document.rs  private.rs  request_type.rs  service.rs  service_account_credentials.rs  signed_url.rs  signing_algorithm.rs  string_to_sign.rs
v4-sign/src/policy_document/: condition.rs  expiration.rs  field.rs  value.rs
v4-sign/src/private/: active_datetime.rs  canonical_request.rs  credential_scope.rs  date.rs  http_verb.rs  policy_document.rs  request_type.rs  signed_url.rs  string_to_sign.rs  utils.rs
v4-sign/src/private/policy_document/: expiration.rs  field.rs
v4-sign/src/private/utils/: unix_timestamp.rs
v4-sign/tests/: lib.rs  policy_document.rs
watchexec1/: Cargo.toml
yew1/: Cargo.toml  README.md
(+100 files in other folders)
