[package]
name = "async-graphql1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
