[package]
name = "clap1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.56"
assert_cmd = "2.0.4"
predicates = "2.1.1"
