[package]
name = "cloud-storage1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
cloud-storage = { version = "0.11.1", default-features = false, features = [
  "rustls-tls",
] }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
