[package]
name = "git21"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"

[dev-dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
dir-diff = "0.3.2"
tempfile = "3.2.0"
