[package]
name = "google-cloud-auth-v0-20"
version = "0.1.0"
edition = "2024"

[dependencies]
google-cloud-auth = "0.20.0"
googleapis-tonic-google-firestore-v1 = "0.20.0"
http = "1.3.1"
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13.1", default-features = false, features = ["tls-webpki-roots"] }
