[package]
name = "google-drive1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
google-authz = { version = "1.0.0-alpha.5", default-features = false, features = ["webpki-roots"] }
http = "0.2"
reqwest = { version = "0.11.23", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-service = "0.3.2"
