[package]
name = "googleapis-google-cloud-auth1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
google-cloud-auth = { git = "https://github.com/bouzuya/google-cloud-rust", branch = "bouzuya", version = "0.1.0" }
http = "1.1.0"
http-body-util = "0.1.1"
reqwest = { version = "0.12.1", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
