[package]
name = "thiserror1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
