[package]
name = "v4-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.35"
form_urlencoded = "1.2.1"
http = "1.1.0"
pem = "3.0.3"
ring = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha256 = "1.5.0"
thiserror = "1.0.58"
url = "2.5.0"

[dev-dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "multipart"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
